<resources>
    <string name="app_name">Dental Care</string>
    <string name="date">Choose Date</string>
    <string name="time">Choose Time</string>
    <string name="calendar">Calendar</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="bookingDetails">Booking Details :</string>
    <string name="booking">Book Now</string>
    <string name="cancel">Cancel</string>
    <string name="edt_date">Enter your date</string>
    <string name="time1">9 AM</string>
    <string name="time2">10 AM</string>
    <string name="time3">11 AM</string>
    <string name="done">Done</string>
    <string name="timeTitle">Choose the time</string>
    <string name="time4">12 PM</string>
    <string name="time5">1 PM</string>
    <string name="time6">2 PM</string>
    <string name="time7">5 PM</string>
    <string name="time8">6 PM</string>
    <string name="time9">7 PM</string>
    <string name="wait">Waiting for more information</string>
    <string name="categories">Categories</string>
    <string name="todo">TODO</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="new_acc">Create New Account</string>
    <string name="signup">Sign up</string>
    <string name="next">Next</string>
    <string name="App_desc">This application will help you find the best dentist at the price you prefer and will allow you to book your appointment with ease. We hope you enjoy our app! </string>
    <string name="welcome">Welcome back!</string>
    <string name="email">Enter your Email</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="txtsignup">Do not have an account?</string>
    <string name="doctorName">Doctor Name</string>
    <string name="qoutes">Smiling is</string>
    <string name="qoutes2">FUN</string>
    <string name="qoutes3">With</string>
    <string name="qoutes4">HEALTHY TEETH</string>
    <string name="appointment">Appointment</string>
    <string name="chkbx">Remember Me</string>
    <string name="admin">Enter as Admin</string>
    <string name="user">Enter as User</string>
    <string name="or">OR</string>
    <string name="pass_ver">Verification!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">ADD</string>
    <string name="doc_name">Doctor Name</string>
    <string name="address">Address</string>
    <string name="speciality">Speciality</string>
    <string name="logout">Logout</string>

</resources>