<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/my_color"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:id="@+id/roomLayout">


        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="263dp"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/doc_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.325"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_address"
            android:layout_width="245dp"
            android:layout_height="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="33dp"
            android:text="@string/address"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_speciality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_username"
            app:layout_constraintVertical_bias="0.19999999" />

        <TextView
            android:id="@+id/tv_item_speciality"
            android:layout_width="244dp"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:text="@string/speciality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.385"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_address" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>